--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ deploy:
  provider: pages
  skip_cleanup: true
  github_token: $GITHUB_TOKEN
- local_dir: dist
+ local_dir: docs
  on:
    branch: main
